force-app/main/default/objects/Opportunity__c/fields/Actual_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Submission_Date__c</fullName>
    <label>Actual Submission Date</label>
    <type>Date</type>
</CustomField>