force-app/main/default/objects/Opportunity__c/fields/Assigned_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_Sales_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>