force-app/main/default/objects/Opportunity__c/fields/Assigned_To_Tender_Owner__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Tender_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To (Tender Owner)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>