force-app/main/default/objects/Opportunity__c/fields/Authority_Organization__c.field-meta.xml
<CustomField>
    <fullName>Authority_Organization__c</fullName>
    <label>Authority / Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>