force-app/main/default/objects/Opportunity__c/fields/BG1_Amount__c.field-meta.xml
<CustomField>
    <fullName>BG1_Amount__c</fullName>
    <label>BG1 Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>