force-app/main/default/objects/Opportunity__c/fields/BG1_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>BG1_Expiry_Date__c</fullName>
    <label>BG1 Expiry Date</label>
    <type>Date</type>
</CustomField>