force-app/main/default/objects/Opportunity__c/fields/BG1_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>BG1_Issue_Date__c</fullName>
    <label>BG1 Issue Date</label>
    <type>Date</type>
</CustomField>