force-app/main/default/objects/Opportunity__c/fields/BG1_Type__c.field-meta.xml
<CustomField>
    <fullName>BG1_Type__c</fullName>
    <label>BG1 Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>