force-app/main/default/objects/Opportunity__c/fields/BG2_Amount__c.field-meta.xml
<CustomField>
    <fullName>BG2_Amount__c</fullName>
    <label>BG2 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>