force-app/main/default/objects/Opportunity__c/fields/BG2_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>BG2_Issue_Date__c</fullName>
    <label>BG2 Issue Date</label>
    <type>Date</type>
</CustomField>