force-app/main/default/objects/Opportunity__c/fields/BG2_Recoverable__c.field-meta.xml
<CustomField>
    <fullName>BG2_Recoverable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BG2 Recoverable</label>
    <type>Checkbox</type>
</CustomField>