force-app/main/default/objects/Opportunity__c/fields/BG2_Type__c.field-meta.xml
<CustomField>
    <fullName>BG2_Type__c</fullName>
    <label>BG2 Type</label>
    <type>Text</type>
    <length>120</length>
</CustomField>