force-app/main/default/objects/Opportunity__c/fields/Bid_Document_Download_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Bid_Document_Download_Deadline__c</fullName>
    <label>Bid Document Download Deadline</label>
    <type>DateTime</type>
</CustomField>