force-app/main/default/objects/Opportunity__c/fields/Bid_Download_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Bid_Download_Deadline__c</fullName>
    <label>Bid Download Deadline</label>
    <type>Date</type>
</CustomField>