force-app/main/default/objects/Opportunity__c/fields/EMD_Amount__c.field-meta.xml
<CustomField>
    <fullName>EMD_Amount__c</fullName>
    <label>EMD Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>