force-app/main/default/objects/Opportunity__c/fields/EPC__c.field-meta.xml
<CustomField>
    <fullName>EPC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EPC</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>EPC</relationshipName>
    <type>Lookup</type>
</CustomField>