force-app/main/default/objects/Opportunity__c/fields/Estimated_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Order_Value__c</fullName>
    <label>Estimated Order Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>