force-app/main/default/objects/Opportunity__c/fields/Execution_Stage__c.field-meta.xml
<CustomField>
    <fullName>Execution_Stage__c</fullName>
    <label>Execution Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Execution_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indent Pending</fullName>
            </value>
            <value>
                <fullName>Participation Decision</fullName>
            </value>
            <value>
                <fullName>Offer Prep</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Nego/RA</fullName>
            </value>
            <value>
                <fullName>Tender Receipt</fullName>
            </value>
            <value>
                <fullName>Offer Prep &amp; Submission</fullName>
            </value>
            <value>
                <fullName>Techno-Com. Evaluation</fullName>
            </value>
            <value>
                <fullName>Price Evaluation</fullName>
            </value>
            <value>
                <fullName>PO Awaited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>