force-app/main/default/objects/Opportunity__c/fields/Execution_Type__c.field-meta.xml
<CustomField>
    <fullName>Execution_Type__c</fullName>
    <label>Execution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase Enquiry</fullName>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>