force-app/main/default/objects/Opportunity__c/fields/Extended_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Extended_Submission_Date__c</fullName>
    <label>Extended Submission Date</label>
    <type>Date</type>
</CustomField>