force-app/main/default/objects/Opportunity__c/fields/Internal_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Approval_Status__c</fullName>
    <label>Internal Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>