force-app/main/default/objects/Opportunity__c/fields/isCloseDateIsInFY__c.field-meta.xml
<CustomField>
    <fullName>isCloseDateIsInFY__c</fullName>
    <formula>AND(
    Close_Date__c  &gt;= DATE(YEAR(TODAY()) - IF(MONTH(TODAY()) &lt; 4, 1, 0), 4, 1),
    Close_Date__c  &lt;= DATE(YEAR(TODAY()) + IF(MONTH(TODAY()) &gt;= 4, 1, 0), 3, 31)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isCloseDateIsInFY</label>
    <type>Checkbox</type>
</CustomField>