force-app/main/default/objects/Opportunity__c/fields/MII_Preference__c.field-meta.xml
<CustomField>
    <fullName>MII_Preference__c</fullName>
    <label>MII Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>