force-app/main/default/objects/Opportunity__c/fields/Opportunity_Owner_Field__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Owner_Field</relationshipName>
    <type>Lookup</type>
</CustomField>