force-app/main/default/objects/Opportunity__c/fields/Opportunity_Region__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Region__c</fullName>
    <label>Opportunity Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>