force-app/main/default/objects/Opportunity__c/fields/Participation_Decision__c.field-meta.xml
<CustomField>
    <fullName>Participation_Decision__c</fullName>
    <label>Participation Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Participate</fullName>
            </value>
            <value>
                <fullName>Regret</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>