force-app/main/default/objects/Opportunity__c/fields/PBG_Amount__c.field-meta.xml
<CustomField>
    <fullName>PBG_Amount__c</fullName>
    <label>PBG Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>