force-app/main/default/objects/Opportunity__c/fields/PBG_Applicable__c.field-meta.xml
<CustomField>
    <fullName>PBG_Applicable__c</fullName>
    <label>PBG Applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>