force-app/main/default/objects/Opportunity__c/fields/PBG_Valid_till_Claim_Upto__c.field-meta.xml
<CustomField>
    <fullName>PBG_Valid_till_Claim_Upto__c</fullName>
    <label>PBG Valid till &amp; Claim Upto</label>
    <type>TextArea</type>
</CustomField>