force-app/main/default/objects/Opportunity__c/fields/PQR_Compliance__c.field-meta.xml
<CustomField>
    <fullName>PQR_Compliance__c</fullName>
    <label>PQR Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matching</fullName>
            </value>
            <value>
                <fullName>Partially matching</fullName>
            </value>
            <value>
                <fullName>Not Maching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>