force-app/main/default/objects/Opportunity__c/fields/PQR_Details__c.field-meta.xml
<CustomField>
    <fullName>PQR_Details__c</fullName>
    <label>PQR Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>