force-app/main/default/objects/Opportunity__c/fields/PQR_Documents__c.field-meta.xml
<CustomField>
    <fullName>PQR_Documents__c</fullName>
    <label>PQR Documents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>