force-app/main/default/objects/Opportunity__c/fields/Pre_bid_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_bid_Meeting_Date__c</fullName>
    <label>Pre-bid Meeting Date</label>
    <type>DateTime</type>
</CustomField>