force-app/main/default/objects/Opportunity__c/fields/PriceBook2Id__c.field-meta.xml
<CustomField>
    <fullName>PriceBook2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Price_book__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>