force-app/main/default/objects/Opportunity__c/fields/Quote_Count__c.field-meta.xml
<CustomField>
    <fullName>Quote_Count__c</fullName>
    <label>Quote Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>