force-app/main/default/objects/Opportunity__c/fields/Quote_Generated__c.field-meta.xml
<CustomField>
    <fullName>Quote_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Generated</label>
    <type>Checkbox</type>
</CustomField>