force-app/main/default/objects/Opportunity__c/fields/Reverse_Auction__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Auction__c</fullName>
    <label>Reverse Auction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>