force-app/main/default/objects/Opportunity__c/fields/SD_Applicable__c.field-meta.xml
<CustomField>
    <fullName>SD_Applicable__c</fullName>
    <label>SD Applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Exempted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>