force-app/main/default/objects/Opportunity__c/fields/SD_Form__c.field-meta.xml
<CustomField>
    <fullName>SD_Form__c</fullName>
    <label>SD Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>BG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>