force-app/main/default/objects/Opportunity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indent Pending</fullName>
            </value>
            <value>
                <fullName>Offer Preparation</fullName>
            </value>
            <value>
                <fullName>Proposal Prep &amp; Approval</fullName>
            </value>
            <value>
                <fullName>Budget Allocation</fullName>
            </value>
            <value>
                <fullName>Specin</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>EPC Tender Process</fullName>
            </value>
            <value>
                <fullName>Project Award to EPC</fullName>
            </value>
            <value>
                <fullName>EPC REQ Prep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>