force-app/main/default/objects/Opportunity__c/fields/Tender_Cost__c.field-meta.xml
<CustomField>
    <fullName>Tender_Cost__c</fullName>
    <label>Tender Cost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nil</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Exempted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>