force-app/main/default/objects/Opportunity__c/fields/Tender_Description__c.field-meta.xml
<CustomField>
    <fullName>Tender_Description__c</fullName>
    <label>Tender Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>