force-app/main/default/objects/Opportunity__c/fields/Tender_Due_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Tender_Due_Date_Time__c</fullName>
    <label>Tender Due Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>