force-app/main/default/objects/Opportunity__c/fields/Tender_Issue_Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Tender_Issue_Publish_Date__c</fullName>
    <label>Tender Issue / Publish Date</label>
    <type>Date</type>
</CustomField>