force-app/main/default/objects/Opportunity__c/fields/Tender_Item__c.field-meta.xml
<CustomField>
    <fullName>Tender_Item__c</fullName>
    <label>Tender Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>