force-app/main/default/objects/Opportunity__c/fields/Tender_Number_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Tender_Number_Reference_ID__c</fullName>
    <label>Tender Number / Reference ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>