force-app/main/default/objects/Opportunity__c/fields/Tender_Opening_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Tender_Opening_Date_Time__c</fullName>
    <label>Tender Opening Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>