force-app/main/default/objects/Opportunity__c/fields/Tender_Source__c.field-meta.xml
<CustomField>
    <fullName>Tender_Source__c</fullName>
    <label>Tender Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IndiaMart</fullName>
            </value>
            <value>
                <fullName>Palladium</fullName>
            </value>
            <value>
                <fullName>GeM</fullName>
            </value>
            <value>
                <fullName>Customer Email</fullName>
            </value>
            <value>
                <fullName>Tender Tiger</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>