force-app/main/default/objects/Opportunity__c/fields/Tender_Submission_Method__c.field-meta.xml
<CustomField>
    <fullName>Tender_Submission_Method__c</fullName>
    <label>Tender Submission Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Part 1</fullName>
            </value>
            <value>
                <fullName>Part 2</fullName>
            </value>
            <value>
                <fullName>Part 3</fullName>
            </value>
            <value>
                <fullName>Part 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>