force-app/main/default/objects/Opportunity__c/fields/Tender_Type__c.field-meta.xml
<CustomField>
    <fullName>Tender_Type__c</fullName>
    <label>Tender Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>