force-app/main/default/objects/Opportunity__c/recordTypes/EPC_Process.recordType-meta.xml
<RecordType>
    <fullName>EPC_Process</fullName>
    <active>true</active>
    <label>EPC Process</label>
</RecordType>